# UA-CS-Bsc1_Vaccine-Simulation

./: CMakeLists.txt  README.md  main.cpp  output.txt
graphics/: GraphicalController.cpp  GraphicalController.h
input/: CorrectInput1Hub.xml  CorrectInput1Hub2.xml  HappyDays.xml  HappyDays2.xml  IllegalFile.txt  InputFileCompare1.txt  InputInvalidRedefinition1.xml  InputInvalidRoot.xml  InputMissingArgument1.xml  InputNonExisitingCentrum.xml  InputRedefinition.xml  output.txt  schemaTest.xml
output/: CGI-expectedA.ini  CGI-expectedB.ini  OutputExpectedIllegalSyntax.txt  OutputExpectedInvalidRedefinition1.txt  Sim-ExpectedOutput.txt  Sim-ExpectedOutput1.txt
simulation/: Simulation.cpp  Simulation.h
src/: Hub.cpp  Hub.h  Inhabitant.cpp  Inhabitant.h  VaccinationCentre.cpp  VaccinationCentre.h  Vaccine.cpp  Vaccine.h
testing/: GraphicalControllerTest.cpp  HubTest.cpp  ImporterTest.cpp  InhabitantTest.cpp  SimulationTest.cpp  UtilitiesTest.cpp  VaccinationCentreTest.cpp  VaccineTest.cpp
tinyXML/: tinyxml.h
utilities/: Importer.cpp  Importer.h  Utilities.cpp  Utilities.h  Utils.h
